--- a/eas.json
+++ b/eas.json
@@ -1,23 +1,9 @@
 {
   "build": {
-    "preview": {
-      "distribution": "internal",
-    "developmentClient": true,
+    "release": {
       "android": {
-        "buildType": "apk"
+        "buildType": "app-bundle"
       }
-    },
-    "preview2": {
-      "android": {
-        "gradleCommand": ":app:assembleRelease"
-      }
-    },
-    "preview3": {
-      "developmentClient": true
-    },
-    "preview4": {
-      "distribution": "internal"
-    },
-    "production": {}
+    }
   }
 }
