--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,7 +15,7 @@
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.10.0",
-    "expo": "53.0.10",
+    "expo": "^53.0.10",
     "expo-dev-client": "~5.2.0",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
